homepage/good.css
/* https://stackoverflow.com/a/5057529 */
html, body {
    padding: 0px; 
    margin: 0px;
    height: 100%;
    width: 100%;
    border: 5px solid black;
}

h1 {
    color: white;
}



#page {
    
    height: 100%;
    width: 100%;
}



#header {
    background-color: rgb(48, 48, 48);
    border: 5px solid black;
    width: 100%;
    text-align: center;
}

#sidebar {
    position: relative;
    display: inline-block;
    border: 5px solid black;
    width: 15%;
    height: 100%;
    left: 0px;

}

#sections {
    position: absolute;
    display: inline-block;
    width: 100%;
    height: 100%;
    border: 5px solid black;
    
}

